// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem component should render correctly with activated props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: none;
  background-color: #11111109;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.51px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: #11111109;
}
.menuItem-d0-0-2-3:focus {
  background-color: #11111129;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {
    background-color: #111111;
  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="false"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;

exports[`MenuItem component should render correctly with default props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: none;
  background-color: transparent;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.51px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: #11111109;
}
.menuItem-d0-0-2-3:focus {
  background-color: #11111129;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {
    background-color: #111111;
  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="false"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;

exports[`MenuItem component should render correctly with disabled props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: none;
  background-color: transparent;
  color: #8c8c8c;
  cursor: default;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.51px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: transparent;
}
.menuItem-d0-0-2-3:focus {
  background-color: transparent;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: default;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="true"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;

exports[`MenuItem component should render correctly with selected props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: none;
  background-color: #f4ab3429;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.51px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: #11111109;
}
.menuItem-d0-0-2-3:focus {
  background-color: #11111129;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {
    background-color: #111111;
  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="false"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;

exports[`MenuItem component should render correctly with submenu type props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: 1px solid #8c8c8c;
  background-color: transparent;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.51px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: #11111109;
}
.menuItem-d0-0-2-3:focus {
  background-color: #11111129;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {
    background-color: #111111;
  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="false"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;

exports[`MenuItem component should render correctly with title type props 1`] = `
Array [
  ".listItem-0-2-1 {
  width: 100%;
  list-style: none;
}
.menuItem-0-2-2 {
  height: 40px;
  display: flex;
  padding: 0 16px;
  position: relative;
  align-items: center;
  font-family: Roboto, Arial;
}
.menuItem-0-2-2:hover {}
.menuItem-0-2-2:focus {}
.menuItem-d0-0-2-3 {
  border-left: none;
  background-color: transparent;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0.13px;
  line-height: 1.5;
}
.menuItem-d0-0-2-3:hover {
  background-color: #11111109;
}
.menuItem-d0-0-2-3:focus {
  background-color: #11111129;
}
.sharedRippleEffect-0-2-4 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-5:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-5:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-6 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-7 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-8 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-9 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-10 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-10:focus:after {
    background-color: #111111;
  }
  .wrapper-d0-0-2-10:hover:after {
    background-color: #111111;
    opacity: 0;
  }
  .ripple-d1-0-2-11 {
    background-color: #111111;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-12 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-13 {
    animation: keyframes-ripple-0-2-9 300ms;
  }",
  <div>
    <li
      aria-disabled="false"
      class=" listItem-0-2-1 MenuItem-gaya"
      tabindex="0"
    >
      <div
        class="wrapper-0-2-5 wrapper-d0-0-2-10"
        data-testid="ripple-wrapper"
        tabindex="-1"
      >
        <div
          class="rippleContainer-0-2-7 rippleContainer-d2-0-2-12"
        >
          <div
            class="ripple-0-2-6 ripple-d1-0-2-11 "
            data-testid="ripple-animation"
          />
        </div>
        <a
          class="menuItem-0-2-2 menuItem-d0-0-2-3"
        >
          Menu Item
        </a>
      </div>
    </li>
  </div>,
]
`;
